--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         World Clock
     </h1>
     <footer>
-        This page is coded by Stacy Loukanis and <a href="">open-sourced on Github.</a>
+        This page is coded by Stacy Loukanis and <a href="https://github.com/SLou-27/world-clock" target="blank">open-sourced on Github.</a>
     </footer>
     <script src="javascript/index.js"></script>
 </body>
