--- a/index.html
+++ b/index.html
@@ -8,9 +8,30 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+    <div class="container">
     <h1>
         World Clock
     </h1>
+
+    <select>
+        <option value="">Choose a city...</option>
+        <option value="">London</option>
+        <option value="">New York</option>
+        <option value="">Auckland</option>
+    </select>
+
+    <div class="city">
+        <h2>Los Angeles</h2>
+        <div class="date">February 4th, 2023</div>
+        <div class="time">10:07 AM</div>
+    </div>
+
+    <div class="city">
+        <h2>Sydney</h2>
+        <div class="date">February 4th, 2023</div>
+        <div class="time">10:07 AM</div>
+    </div>
+    </div>
     <footer>
         This page is coded by Stacy Loukanis and <a href="https://github.com/SLou-27/world-clock" target="blank">open-sourced on Github.</a>
     </footer>
