--- a/index.html
+++ b/index.html
@@ -16,13 +16,15 @@
         World Clock
     </h1>
 
-    <select>
+    <select id="city">
         <option value="">Choose a city...</option>
-        <option value="">London</option>
-        <option value="">New York</option>
-        <option value="">Auckland</option>
+        <option value="Europe/London">London</option>
+        <option value="America/New_York">New York</option>
+        <option value="Pacific/Auckland">Auckland</option>
+        <option value="Asia/Tokyo">Tokyo</option>
+        <option value="Pacific/Honolulu">Honolulu</option>
     </select>
-
+<div id="cities">
     <div class="city" id="los-angeles">
         <div>
         <h2>Los Angeles</h2>
@@ -40,6 +42,7 @@
         <div class="time"></div>
     
     </div>
+</div>
     
     </div>
     <footer>
